Fix aligned corpora tt list box handling

--- a/public/files/css/shared/textTypes.less
+++ b/public/files/css/shared/textTypes.less
@@ -228,14 +228,13 @@
 
         .TableTextTypeAttribute.aligned {
 
-            th,
-            td {
+            div {
                 input[type="checkbox"] {
                     padding-left: 1em;
                 }
             }
 
-            td.note {
+            .note {
                 p {
                     max-width: 17em;
                     padding: 0;
